--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name=“description” content=“”>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="noindex, nofollow">
   <!-- サイトタイトル -->
   <title>デモサイト３</title>
    <!-- CSS読み込み -->
